Rename the models.RollStatsData type to RollStats
